--- a/WebSite/templates/navbar.html
+++ b/WebSite/templates/navbar.html
@@ -49,7 +49,12 @@
                     Account
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="profileDropdown">
-
+                    <li><a class="dropdown-item" href="#">Profile <i class="fa-solid fa-user"></i></a></li>
+                    <li><a class="dropdown-item" href="#">Orders <i class="fa-solid fa-truck-fast"></i></a></li>
+                    <li><a class="dropdown-item" href="/logout">Log Out <i
+                                class="fa-solid fa-right-from-bracket"></i></a></li>
+                    <li><a class="dropdown-item" href="/login">Login <i class="fa-solid fa-right-to-bracket"></i></a>
+                    </li>
 
                 </ul>
             </li>
