--- a/WebSite/templates/home.html
+++ b/WebSite/templates/home.html
@@ -152,10 +152,10 @@
 
                 <div class="col">
 
-                    <h5 style="font-weight: 600; font-family: 'Times New Roman', Times, serif;">Ksh {{
+                    <h5 style="font-weight: 600; font-family: 'Times New Roman', Times, serif;">LE {{
                         item.current_price }}</h5>
                     <strike>
-                        <p style="color: gray;">Ksh {{ item.previous_price}}</p>
+                        <p style="color: gray;">LE {{ item.previous_price}}</p>
                     </strike>
                 </div>
 
