--- a/WebSite/templates/cart.html
+++ b/WebSite/templates/cart.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
+
 {% block title %} Cart {% endblock %}
+
+
 {% block body %}
 
 <div class="container my-5">
@@ -22,10 +25,10 @@
                             <div>
                                 <h3>{{ item.product.product_name }}</h3>
                                 <div class="my-3">
-                                    <label for="quantity">Quantity</label>
+                                    <label for="qyantity">Quantity</label>
                                     <a class="minus-cart btn" pid="{{item.id}}"><i
                                             class="fas fa-minus-square fa-lg"></i></a>
-                                    <span id="quantity">{{ item.quantity }}</span>
+                                    <span id="qyantity">{{ item.qyantity }}</span>
                                     <a class="plus-cart btn " pid="{{ item.id }}"><i
                                             class="fas fa-plus-square fa-lg"></i></a>
 
@@ -58,8 +61,8 @@
                         <li
                             class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                             <strong>{{item.product.product_name}}</strong><span
-                                id="amount">{{item.product.current_price}} X <span id="quantity{{item.id}}">{{
-                                    item.quantity}}</span></span>
+                                id="amount">{{item.product.current_price}} X <span id="qyantity{{item.id}}">{{
+                                    item.qyantity}}</span></span>
                         </li>
 
                         {% endfor %}
